--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
 
-
-/*# sourceMappingURL=style.css.map */
+header {
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.1);
+}
+header > svg {
+  width: 70px;
+  margin-right: 20px;
+}
+header > button {
+  height: 50px;
+  align-self: center;
+  margin-left: 50%;
+  cursor: pointer;
+  background: none;
+  border: transparent;
+  border-radius: 10px;
+  padding: 0 10px;
+}
+header > button:hover {
+  background-color: #d7daba;
+  transition-property: background-color;
+  transition-duration: 0.3s;
+}/*# sourceMappingURL=style.css.map */
