--- a/style/style.css
+++ b/style/style.css
@@ -32,4 +32,74 @@ header > button:hover {
   background-color: #d7daba;
   transition-property: background-color;
   transition-duration: 0.3s;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 15px;
+  width: 80%;
+  margin: auto;
+  margin-top: 50px;
+}
+main .card {
+  background: rgb(231, 235, 200);
+  background: radial-gradient(circle, rgb(231, 235, 200) 0%, rgba(179, 181, 153, 0.3057598039) 100%);
+  height: 300px;
+  border-radius: 10px;
+}
+main .card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 90%;
+  height: 100%;
+  margin: auto;
+}
+main .card-bottom {
+  margin-bottom: 20px;
+}
+main .title {
+  text-align: center;
+  margin-bottom: 0;
+  text-transform: uppercase;
+}
+main .author {
+  margin-top: 0;
+}
+main button {
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: 700;
+  letter-spacing: 3px;
+  cursor: pointer;
+}
+
+.btn-remove {
+  margin-top: 3px;
+  background-color: #a5a1a1;
+}
+.btn-remove:hover {
+  background-color: #8c8787;
+  transition: background-color 0.3s;
+}
+
+.read {
+  background-color: #3b7f89;
+}
+.read:hover {
+  background-color: #2c5e65;
+  transition: background-color 0.3s;
+}
+
+.unread {
+  background-color: #ec7676;
+}
+.unread:hover {
+  background-color: #e64949;
+  transition: background-color 0.3s;
 }/*# sourceMappingURL=style.css.map */
