--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-$green-color: #d7daba;
+$primary-color: #d7daba;
+$secondary-color: #3b7f89;
+$unread-color: #ec7676;
 
 body,
 html {
@@ -29,9 +31,80 @@ header {
     border-radius: 10px;
     padding: 0 10px;
     &:hover {
-      background-color: $green-color;
+      background-color: $primary-color;
       transition-property: background-color;
       transition-duration: 0.3s;
     }
+  }
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 15px;
+  width: 80%;
+  margin: auto;
+  margin-top: 50px;
+  .card {
+    background: rgb(231, 235, 200);
+    background: radial-gradient(
+      circle,
+      rgba(231, 235, 200, 1) 0%,
+      rgba(179, 181, 153, 0.30575980392156865) 100%
+    );
+    height: 300px;
+    border-radius: 10px;
+  }
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 90%;
+    height: 100%;
+    margin: auto;
+  }
+  .card-bottom {
+    margin-bottom: 20px;
+  }
+  .title {
+    text-align: center;
+    margin-bottom: 0;
+    text-transform: uppercase;
+  }
+  .author {
+    margin-top: 0;
+  }
+  button {
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    color: white;
+    text-transform: uppercase;
+    font-size: 1em;
+    font-weight: 700;
+    letter-spacing: 3px;
+    cursor: pointer;
+  }
+}
+.btn-remove {
+  margin-top: 3px;
+  background-color: #a5a1a1;
+  &:hover {
+    background-color: darken(#a5a1a1, 10);
+    transition: background-color 0.3s;
+  }
+}
+.read {
+  background-color: $secondary-color;
+  &:hover {
+    background-color: darken($secondary-color, 10);
+    transition: background-color 0.3s;
+  }
+}
+.unread {
+  background-color: $unread-color;
+  &:hover {
+    background-color: darken($unread-color, 10);
+    transition: background-color 0.3s;
   }
 }
