Add basic functions and variables
I added variables referring to <main> and to the READ button in order
to be able to change its attribute in the future
I added an array myLibrary that will contain all the books
I added a function to add books to myLibrary
I added a function to display the cards in the library
I also added a constructor for books

--- a/style/style.css
+++ b/style/style.css
@@ -30,8 +30,7 @@ header > button {
 }
 header > button:hover {
   background-color: #d7daba;
-  transition-property: background-color;
-  transition-duration: 0.3s;
+  transition: background-color 0.3s;
 }
 
 main {
