--- a/style/style.scss
+++ b/style/style.scss
@@ -32,8 +32,7 @@ header {
     padding: 0 10px;
     &:hover {
       background-color: $primary-color;
-      transition-property: background-color;
-      transition-duration: 0.3s;
+      transition: background-color 0.3s;
     }
   }
 }
