--- a/style/style.scss
+++ b/style/style.scss
@@ -6,8 +6,13 @@ $unread-color: #ec7676;
 body,
 html {
   height: 100%;
+  width: 100%;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+}
+
+.blurred {
+  filter: blur(5px);
 }
 
 header {
@@ -105,5 +110,67 @@ main {
   &:hover {
     background-color: darken($unread-color, 10);
     transition: background-color 0.3s;
+  }
+}
+
+.form-section {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  display: none;
+}
+
+form {
+  height: min-content;
+  border-radius: 5px;
+  font-weight: 700;
+  width: clamp(250px, 300px, 30%);
+  background-color: rgba(59, 127, 137, 0.7);
+  legend {
+    margin-top: 1em;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  > div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  div:nth-child(4) {
+    flex-direction: row;
+  }
+  button {
+    margin-bottom: 30px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 2em;
+    border-radius: 5px;
+    border: transparent;
+    cursor: pointer;
+    background-color: $secondary-color;
+    &:hover {
+      background-color: darken($secondary-color, 5);
+      transition: background-color 0.3s;
+    }
+  }
+  input:not([type='checkbox']) {
+    margin-top: 5px;
+    height: 20px;
+    border: transparent;
+    border-radius: 2px;
   }
 }
