--- a/style/style.scss
+++ b/style/style.scss
@@ -105,7 +105,7 @@ main {
     transition: background-color 0.3s;
   }
 }
-.unread {
+.pending {
   background-color: $unread-color;
   &:hover {
     background-color: darken($unread-color, 10);
