--- a/style/style.css
+++ b/style/style.css
@@ -19,9 +19,20 @@ header {
   padding-bottom: 20px;
   box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.1);
 }
+@media screen and (max-width: 600px) {
+  header h1 {
+    display: none;
+  }
+}
 header > svg {
   width: 70px;
   margin-right: 20px;
+}
+@media screen and (max-width: 600px) {
+  header > svg {
+    margin-right: 0;
+    margin-left: 20px;
+  }
 }
 header > button {
   height: 50px;
@@ -45,6 +56,11 @@ main {
   width: 80%;
   margin: auto;
   margin-top: 50px;
+}
+@media screen and (max-width: 430px) {
+  main {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
 }
 main .card {
   background: rgb(231, 235, 200);
@@ -70,6 +86,7 @@ main .title {
 }
 main .author {
   margin-top: 0;
+  text-transform: capitalize;
 }
 main button {
   width: 100%;
