--- a/style/style.scss
+++ b/style/style.scss
@@ -22,9 +22,18 @@ header {
   margin-top: 20px;
   padding-bottom: 20px;
   box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.1);
+  @media screen and (max-width: 600px) {
+    h1 {
+      display: none;
+    }
+  }
   > svg {
     width: 70px;
     margin-right: 20px;
+    @media screen and (max-width: 600px) {
+      margin-right: 0;
+      margin-left: 20px;
+    }
   }
   > button {
     height: 50px;
@@ -49,6 +58,9 @@ main {
   width: 80%;
   margin: auto;
   margin-top: 50px;
+  @media screen and (max-width: 430px) {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
   .card {
     background: rgb(231, 235, 200);
     background: radial-gradient(
@@ -77,6 +89,7 @@ main {
   }
   .author {
     margin-top: 0;
+    text-transform: capitalize;
   }
   button {
     width: 100%;
